tdf#116549 docx export: write "nil" to uninherit a border

If styles would provide a border, then non-borders need
to be explicitly written out.

Unit tests prove this out for both styles and pragraphs.

Change-Id: I4195d38622adc09831f6dad64840a92a42c494b5